# rtp-llm

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .cursor  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  1-ascend_memory_management_device_runtime_v0.3.md  1.cu  1.diff  2-ascend_op_detailed_plan_v0.1.md  BUILD  BUILD.aiter  BUILD.pytorch  BUILD.torch_npu  CLAUDE.md  INSTALL.md  MEGAMOE_E2E_AND_PERF.md  NOTICE  README.md  README_cn.md  WORKSPACE  ascend_build-detailed_plan.md  ascend_npu_adaptation_plan_v0.1.md  batch_test.py  bench_omni.py  bench_omni_e2e.py  bf16_ep_start.sh  build_cuda13_progress.md  cc_test_wrapper.sh  clean_cache.sh  conftest.py  deepep_vs_mori_perf_summary.md  def.bzl  deps  dsv4_cp_overlap_repetition_investigation.md  dsv4_reuse_cache_fix_report.md  flash_attn_interface.py  (+25 more)
open_source/: .bazeliskrc  .pre-commit-config.yaml  bailian_start.sh  maga_start.sh  pyproject.toml
open_source/arm_docker/: arm.Dockerfile  build.sh
open_source/bazel/: arch_select.bzl
open_source/nvidia_docker/: build_nivida_docker.sh  build_nivida_maga_deploy_docker.sh  nvidia_maga.Dockerfile  nvidia_maga_deploy.Dockerfile
open_source/package/: README.md  atrex-0.0.1-py3-none-any.whl  base_gpu_cuda12.Dockerfile  build_amd.sh  build_arm.sh  build_cuda12.sh  buildfarm.Dockerfile  dev.Dockerfile  docs.Dockerfile  maga.Dockerfile  package_docker.sh
open_source/rocm_docker/: build.sh  functions  rocm.Dockerfile  rocm63.Dockerfile  rocm6302.Dockerfile
open_source/rtp_llm/openai_renderers/: flot_vl_renderer.py
rtp_llm/cpp/kernels/atex/: BUILD.bazel  common.cuh
rtp_llm/cpp/kernels/atex/block/: reduce.cuh
rtp_llm/cpp/kernels/atex/cooperative/: common.cuh  reduce.cuh
rtp_llm/cpp/kernels/atex/copy/: vec.cuh  vec.h
rtp_llm/cpp/kernels/atex/kernels/f16/: rmsnorm.cu  rmsnorm.h
rtp_llm/cpp/kernels/atex/kernels/f32/: sample.cu  sample.h
rtp_llm/cpp/kernels/atex/ops/f16/: gate_silu.cu  gate_silu.h  rmsnorm.cu  rmsnorm.h
rtp_llm/cpp/kernels/atex/ops/f32/: sample.cu  sample.h
rtp_llm/cpp/kernels/atex/ops/f8/: quant.cu  quant.h
rtp_llm/cpp/kernels/atex/thread/: reduce.cuh
rtp_llm/cpp/kernels/atex/warp/: reduce.cuh
rtp_llm/cpp/kernels/triton/: BUILD.bazel  aot_triton_kernel.bzl  aot_triton_kernel_compiler.py  aot_triton_kernels_linker.py  layernorm_kernels.cu  layernorm_kernels.h  layernorm_kernels.py
rtp_llm/flexlb/: .gitignore  .pre-commit-config.yaml  .sdkmanrc  BUILD  BUILD.bazel  BUILD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_BAZEL.md  antx.properties  deps.bzl  env-setup.sh  maven_rules.bzl  pom.xml
rtp_llm/flexlb/APP-META/docker-config/: Dockerfile_base  Dockerfile_base_arm64  Dockerfile_production  Dockerfile_production_arm64  Dockerfile_staging  Dockerfile_staging2  Dockerfile_testing
rtp_llm/flexlb/APP-META/docker-config/environment/arm64/: noble-aliyun-ports.list
rtp_llm/flexlb/APP-META/docker-config/environment/common/cai/conf/: nginx-proxy-waf.conf  nginx-proxy.conf
rtp_llm/flexlb/BOOT-INF/classes/: logback-spring.xml
rtp_llm/flexlb/docs/: BAZEL_INTEGRATION.md  flexlb-master-mock-engine-performance-20260717.md  flexlb-master-mock-engine-performance-handoff.md  flexlb-master-slo-batch-evaluation-20260717.md
rtp_llm/flexlb/flexlb-api/: pom.xml
rtp_llm/flexlb/flexlb-api/src/main/java/org/flexlb/: Application.java
rtp_llm/flexlb/flexlb-api/src/main/java/org/flexlb/config/: CorsConfig.java  NettyServerConfig.java
rtp_llm/flexlb/flexlb-api/src/main/java/org/flexlb/dispatcher/: BatchBodyParser.java  (+38 more)
rtp_llm/flexlb/flexlb-api/src/main/resources/: application-test.yml  application.yml  kmonitor-prometheus.properties.example  logback-spring.xml
rtp_llm/flexlb/flexlb-api/src/main/resources/warmup/: 1.sh  2.sh
rtp_llm/flexlb/flexlb-api/src/test/java/org/flexlb/: KMonitorPrometheusPropertiesTemplateTest.java  PrometheusActuatorIntegrationTest.java  ReuseSpringContextIntegrationTest.java
rtp_llm/flexlb/flexlb-api/src/test/resources/: application-test.yml
rtp_llm/flexlb/flexlb-cache/: pom.xml
rtp_llm/flexlb/flexlb-common/: pom.xml
rtp_llm/flexlb/flexlb-grpc/: pom.xml
rtp_llm/flexlb/flexlb-grpc/src/main/proto/: kvcm_meta_service.proto
rtp_llm/flexlb/flexlb-grpc/src/main/resources/proto/: engine_rpc_service.proto
rtp_llm/flexlb/flexlb-mock-engine/: pom.xml
rtp_llm/flexlb/flexlb-mock-engine/src/main/resources/: logback.xml
rtp_llm/flexlb/flexlb-prometheus-monitor/: pom.xml
rtp_llm/flexlb/flexlb-sync/: CLAUDE.md  pom.xml
rtp_llm/flexlb/tools/online_eval/: .gitignore  README.md  analyze_burst_results.py  analyze_inflight_vs_qps.py  analyze_slo_batch.py  analyze_ttft_degradation.py  anomaly_smoke.py  cancel_smoke.py  common.sh  engine_disconnect_ttft_test.sh  engine_kill_restart_test.sh  flexlb_behavior_test.sh  flexlb_load_client.py  flexlb_smoke_base.py  generate_stability_report.py  master_kill_restart_test.sh  master_recovery_ttft_test.sh  mock_engine_cluster.py  mock_engine_shard_launcher.py  reconstruct_summary.py  resilience_smoke.py  run_batcher_experiments.sh  run_burst_test.sh  run_cancel_smoke.sh  run_inflight_experiment.py  run_matrix_smoke.sh  run_online_eval.sh  run_perf.sh  run_resilience.sh  run_single_engine.py  run_smoke.sh  run_stability_test.sh  sanitize_online_log_fixtures.mjs  scheduling_smoke.py  stability_monitor.py  test_resolve_decode.py
rtp_llm/flexlb/tools/online_eval/data/config/: master_fixed_window.json  master_fixed_window_220ms.json  master_fixed_window_220ms_4g.json  master_fixed_window_4g.json  master_fixed_window_slo500_wait160.json
rtp_llm/flexlb/tools/online_eval/data/online_logs/: pod1_arrivals.tsv  sample_access.json  trace_30min.jsonl
rtp_llm/flexlb/tools/online_eval/data/performance/: dsv4_flash_performance.fast_ab.json  dsv4_flash_performance.sample.json
rtp_llm/flexlb/tools/online_eval/online_eval/: __init__.py  mock_engine.py  proto_utils.py  report.py  rt_model.py  stats.py  trace_loader.py
rtp_llm/flexlb/tools/online_eval/tests/: test_analyze_slo_batch.py  test_mock_engine.py  test_sanitized_fixtures.py  test_trace_loader.py
(+11030 files in other folders)
