# RTP-LLM Open Source Project Configuration
#
# 此文件仅包含开源依赖，不包含私有 URL。
# 适用于开源社区用户。

[build-system]
requires = [
    "setuptools>=75.0,<82",
    "wheel",
    "tomli; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "rtp-llm"
dynamic = ["version", "dependencies"]
description = "High-performance Large Language Model inference engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Alibaba RTP-LLM Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
rtp-llm = "rtp_llm.cli.main:main"
rtp-llm-server = "rtp_llm.start_server:main"

[project.entry-points."pytest11"]
remote-gpu = "rtp_llm.test.remote_tests.plugin"
rtp-ci-profile = "rtp_llm.test.ci_profile_plugin"

[project.entry-points."rtp_llm.models"]
# Model plugins can be registered here

[tool.setuptools]
package-dir = {"" = "."}
packages = ["rtp_llm"]

# ``dependencies`` must use ``file`` (setuptools 80 schema does not allow ``attr`` here).
# setup.py refreshes this file before ``setup()`` so it matches the detected platform.
[tool.setuptools.dynamic]
version = {attr = "setup.dynamic_version"}
dependencies = {file = ["_build/install_requires_for_uv.txt"]}

[tool.setuptools.package-data]
rtp_llm = [
    "libs/*.so",
    "tokenizer_data/*",
    "config/*.json",
    "ops/**/*.pyi",
]

# ============================================================
# RTP-LLM 构建配置
# ============================================================
[tool.rtp-llm]
# 基础依赖 - 所有平台共用 (仅开源包)
# 历史上由旧基础 requirements 源迁移而来
base-dependencies = [
    # Core
    "filelock>=3.20.0",
    "jinja2",
    "sympy",
    "typing-extensions",
    "importlib_metadata",

    # ML/Transformers
    "transformers==4.51.2",
    "sentencepiece==0.2.0",
    "safetensors",
    "numpy<2.0a0,>=1.25",
    "einops",
    "timm==0.9.12",
    "bitsandbytes>=0.41.0",

    # Server/API
    "fastapi==0.115.6",
    "uvicorn==0.30.0",
    "grpcio==1.62.0",
    "grpcio-tools==1.57.0",
    "protobuf==4.25",
    "aiohttp",
    "orjson",
    "pydantic",
    # Pin pyarrow to 16.x: pyarrow 23.x reproducibly crashes TP convert tests
    # in libarrow background_thread_entry during import/runtime initialization.
    "pyarrow==16.1.0",

    # Utilities
    "setuptools>=64.0,<82",
    "dacite",
    "psutil",
    "tiktoken==0.7.0",
    "lru-dict",
    "py-spy",
    "cpm_kernels",
    "prettytable",
    "setproctitle",
    "portalocker",
    "concurrent_log_handler",
    "pybind11_stubgen",
    "pyOpenSSL==24.1.0",

    # Image/Media
    "Pillow",
    "pillow-heif",
    "pillow-avif-plugin==1.5.2",
    "librosa",
    "matplotlib",

    # Cloud/Storage
    "oss2",
    "pyodps",
    "blobfile",

    # NLP/AI
    "onnx==1.16.0",
    "sentence-transformers==2.7.0",
    "json5",
    "dashscope>=1.11.0",
    "jieba",
    "openai",
    "nest_asyncio",
    "partial_json_parser",

    # Monitoring
    "thrift",

    # Video processing
    "decord==0.6.0 ; platform_machine == 'x86_64'",

    # Platform-specific
    "pynvml",
]

[tool.pytest.ini_options]
# Pytest 最低版本要求
minversion = "7.0"

# 测试搜索路径
testpaths = [
    "rtp_llm/test",
    "rtp_llm/utils/test",
    "rtp_llm/config/test",
    "rtp_llm/distribute/test",
    "rtp_llm/server",
    "rtp_llm/frontend/test",
    "rtp_llm/models/multimodal/test",
    "rtp_llm/models_py",
    "rtp_llm/cpp/models",
    "rtp_llm/cpp/model_rpc/test",
    "rtp_llm/aios",
]

# 测试文件、类和函数的匹配模式
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]

# JUnit XML 报告中的日志记录级别
junit_logging = "all"

# Markers matching Bazel tags
markers = [
    # Device/Platform markers
    "gpu(type, count): requires GPU — use @pytest.mark.gpu(type='A10', count=1)",
    "cpu: CPU-only tests (no GPU required)",
    "cuda: CUDA-specific tests (NVIDIA GPU)",
    "rocm: ROCm-specific tests (AMD GPU)",
    "ppu: PPU-specific tests",

    # Legacy GPU type markers (deprecated — use gpu(type=...) instead)
    "A10: (deprecated) use gpu(type='A10')",
    "GeForce_RTX_3090: (deprecated) use gpu(type='GeForce_RTX_3090')",
    "GeForce_RTX_4090: (deprecated) use gpu(type='GeForce_RTX_4090')",
    "Tesla_V100S_PCIE_32GB: (deprecated) use gpu(type='Tesla_V100S_PCIE_32GB')",
    "L20: (deprecated) use gpu(type='L20')",
    "H20: (deprecated) use gpu(type='H20')",
    "SM100: (deprecated) use gpu(type='SM100')",
    "SM100_ARM: (deprecated) use gpu(type='SM100_ARM')",
    "MI308X: (deprecated) use gpu(type='MI308X')",
    "PPU_ZW810E: (deprecated) use gpu(type='PPU_ZW810E')",

    # Test type markers
    "smoke: smoke tests",
    "light: light smoke test suite (quick validation)",
    "manual: manual tests - not run automatically",
    "slow: slow tests",
    "perf: performance tests",
    "timeout(timeout): per-test timeout override from pytest-timeout",

    # Feature markers
    "open_skip: skip in open source build",
]

# 日志配置
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 默认命令行选项
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    # C++ wrapper tests (bazel-compiled test .so, run via cpp-ut-* jobs)
    "--ignore=rtp_llm/cpp/models/context_parallel/test",
    "--ignore=rtp_llm/cpp/models/eplb/test",
]

# 异步测试模式
asyncio_mode = "auto"

# 默认超时时间
timeout = 60

# 忽略特定类型的警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

# =============================================================================
# CI pytest profiles (Aone main.yaml py-ut-* / smoke-* jobs).
# Consumed by: pytest --rtp-ci-profile=<name> or RTP_PYTEST_CI_PROFILE=<name>
# =============================================================================
[tool.rtp_llm.pytest_ci]
version = 1
default_pytest_cli = "-v --tb=short --timeout=300"

[tool.rtp_llm.pytest_ci.profiles.py_ut_sm8x]
description = "Python UT on SM8x class GPUs (py-ut-sm8x)"
gpu_type = "A10"
markexpr = "not H20 and not MI308X and not SM100 and not SM100_ARM and not PPU_ZW810E and not smoke and not perf and not manual"

[tool.rtp_llm.pytest_ci.profiles.py_ut_sm9x]
description = "Python UT on H20 / SM9x pool (py-ut-sm9x)"
gpu_type = "H20"
markexpr = "H20 and not MI308X and not SM100 and not SM100_ARM and not PPU_ZW810E and not smoke and not perf and not manual"

[tool.rtp_llm.pytest_ci.profiles.py_ut_gb200]
description = "Python UT on GB200 / SM100_ARM (py-ut-gb200)"
gpu_type = "SM100_ARM"
markexpr = "SM100_ARM and not smoke and not perf and not manual"

[tool.rtp_llm.pytest_ci.profiles.py_ut_amd]
description = "Python UT on AMD MI308X (py-ut-amd)"
gpu_type = "MI308X"
markexpr = "MI308X and not smoke and not perf and not manual"

[tool.rtp_llm.pytest_ci.profiles.py_ut_ppu]
description = "Python UT on PPU (py-ut-ppu)"
gpu_type = "PPU_ZW810E"
markexpr = "(PPU_ZW810E) and not smoke and not perf and not manual"

[tool.rtp_llm.pytest_ci.profiles.py_ut_frontend]
description = "Frontend Python UT (py-ut-frontend)"
paths = ["rtp_llm/frontend/test", "rtp_llm/test/frontend_test"]
markexpr = "not manual and not rocm and not cpu"

# -------- OSS smoke profiles (drive test_smoke_oss.py) --------
[tool.rtp_llm.pytest_ci.profiles.smoke_h20_oss]
description = "OSS smoke H20 (smoke-h20-oss)"
paths = ["rtp_llm/test/smoke/test_smoke_oss.py"]
markexpr = "manual and smoke and H20"

[tool.rtp_llm.pytest_ci.profiles.smoke_sm8x_oss]
description = "OSS smoke SM8x (smoke-sm8x-oss)"
paths = ["rtp_llm/test/smoke/test_smoke_oss.py"]
markexpr = "manual and smoke and not H20 and not MI308X and not SM100 and not SM100_ARM and not PPU_ZW810E"

[tool.rtp_llm.pytest_ci.profiles.smoke_sm100_oss]
description = "OSS smoke SM100 (smoke-sm100-oss)"
paths = ["rtp_llm/test/smoke/test_smoke_oss.py"]
markexpr = "manual and smoke and (SM100 or SM100_ARM)"

[tool.rtp_llm.pytest_ci.profiles.smoke_rocm_oss]
description = "OSS smoke ROCm (smoke-rocm-oss)"
paths = ["rtp_llm/test/smoke/test_smoke_oss.py"]
# Must match smoke_defs_oss.py gpu markers (MI308X_ROCM7), not the hyphenated gpu_type string.
markexpr = "manual and smoke and MI308X_ROCM7"

[tool.rtp_llm.pytest_ci.profiles.smoke_remote_cache_oss]
description = "OSS smoke remote cache (smoke-remote-cache-oss)"
paths = ["rtp_llm/test/smoke/test_smoke_oss.py"]
markexpr = "manual and smoke and remote_cache"

# -------- Internal smoke profiles (drive test_smoke_internal.py) --------
[tool.rtp_llm.pytest_ci.profiles.smoke_h20_internal]
description = "Internal smoke H20 (smoke-h20-internal)"
paths = ["../internal_source/rtp_llm/test/smoke/test_smoke_internal.py"]
markexpr = "manual and smoke and H20"

[tool.rtp_llm.pytest_ci.profiles.smoke_sm8x_internal]
description = "Internal smoke SM8x (smoke-sm8x-internal)"
paths = ["../internal_source/rtp_llm/test/smoke/test_smoke_internal.py"]
markexpr = "manual and smoke and not H20 and not MI308X and not SM100 and not SM100_ARM and not PPU_ZW810E"

[tool.rtp_llm.pytest_ci.profiles.smoke_ppu_internal]
description = "Internal smoke PPU (smoke-ppu-internal)"
paths = ["../internal_source/rtp_llm/test/smoke/test_smoke_internal.py"]
markexpr = "manual and smoke and PPU_ZW810E"

[tool.rtp_llm.pytest_ci.profiles.smoke_amd_internal]
description = "Internal smoke AMD MI308X (smoke-amd-internal)"
paths = ["../internal_source/rtp_llm/test/smoke/test_smoke_internal.py"]
markexpr = "manual and smoke and MI308X"

[tool.rtp_llm.pytest_ci.profiles.perf_sm9x]
description = "Performance tests on H20 / SM9x (perf-test)"
paths = ["rtp_llm/test/remote_tests/test_perf_remote.py"]
markexpr = "manual and perf and H20"
